fixed z-index レイアウト 修正

--- a/src/pages/limit/Limit.module.scss
+++ b/src/pages/limit/Limit.module.scss
@@ -12,7 +12,7 @@ $width: responsive-width(pc);
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 9995;
+  z-index: 9998;
   width: 100vw;
   height: $innerHeight;
   background: $promo_clr;
@@ -21,11 +21,6 @@ $width: responsive-width(pc);
   display: flex;
   align-items: center;
   justify-content: center;
-
-  animation-name: fadeIn;
-  animation-duration: 0.4s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-out;
 
   &_resize {
     display: block;
